cmake_minimum_required(VERSION 3.5)

project(fastuidraw)

option(BUILD_GL "Build/install GL libs" ON)
option(BUILD_GLES "Build/install GLES libs" OFF)
option(BUILD_DEMOS "Build demos ?" OFF)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)

set(GL_FLAVORS_TO_BUILD)
if(BUILD_GL)
  list(APPEND GL_FLAVORS_TO_BUILD GL)
endif()
if(BUILD_GLES)
  list(APPEND GL_FLAVORS_TO_BUILD GLES)
endif()
if ("${GL_FLAVORS_TO_BUILD}" STREQUAL "")
  message(SEND_ERROR "No backend specified, define BUILD_GL (GL backend) and/or BUILD_GLES (GLES backend)")
endif()

add_subdirectory(shell_scripts)
add_subdirectory(src/fastuidraw)
add_subdirectory(docs)
if(BUILD_DEMOS)
  add_subdirectory(demos/common)
  add_subdirectory(demos/atlas_tests/glyph_test)
  add_subdirectory(demos/atlas_tests/gradient_test)
  add_subdirectory(demos/atlas_tests/image_test)
  add_subdirectory(demos/painter_cells)
  add_subdirectory(demos/painter_clippath_test)
  add_subdirectory(demos/painter_cliprect_test)
  add_subdirectory(demos/painter_glyph_test)
  add_subdirectory(demos/painter_path_test)
  add_subdirectory(demos/painter_test)
endif()
